[gd_scene load_steps=14 format=3 uid="uid://bcjhf4sva1ypb"]

[ext_resource type="Script" path="res://scripts/mp_lobby_scene.gd" id="1_h4b0v"]
[ext_resource type="Texture2D" uid="uid://cbpabvbncsrqv" path="res://assets/images/bg.png" id="2_mqvhc"]
[ext_resource type="Script" path="res://addons/godot-socketio/socketio.gd" id="2_v13p7"]
[ext_resource type="Texture2D" uid="uid://c4pji43cyew3j" path="res://assets/images/title_screen_players_lobby 1@2x.png" id="3_0sg8s"]
[ext_resource type="FontFile" uid="uid://cf3a7mowy5fgl" path="res://assets/fonts/kenvector_future.ttf" id="4_utsmw"]
[ext_resource type="StyleBox" uid="uid://ccqgv0dsve6l0" path="res://assets/styleBox/logIn_button_hover.tres" id="5_nhk61"]
[ext_resource type="StyleBox" uid="uid://dsmipxadgfpou" path="res://assets/styleBox/logIn_button_normal.tres" id="6_cj54l"]
[ext_resource type="Script" path="res://scripts/sp_settings.gd" id="9_8ivq5"]
[ext_resource type="FontFile" uid="uid://0nrf8fb7tftm" path="res://assets/fonts/Lobster 1.4.otf" id="10_eex3c"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dh2o8"]
bg_color = Color(0.729412, 0.215686, 0.215686, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0xjsq"]
bg_color = Color(0.239216, 0.239216, 0.239216, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.239216, 0.239216, 0.239216, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5wcuy"]
bg_color = Color(0.85098, 0.85098, 0.85098, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.85098, 0.85098, 0.85098, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wgurt"]
bg_color = Color(0.85098, 0.85098, 0.85098, 1)
border_width_left = 5
border_width_right = 5
border_color = Color(0.85098, 0.85098, 0.85098, 1)

[node name="MPLobbyScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h4b0v")

[node name="SocketIO" type="Node" parent="."]
script = ExtResource("2_v13p7")

[node name="BGColour" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.305882, 0.596078, 1)

[node name="JesterBG" type="TextureRect" parent="."]
self_modulate = Color(1, 1, 1, 0.294118)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_mqvhc")

[node name="SP_title" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.179
anchor_right = 0.5
anchor_bottom = 0.179
offset_left = -740.0
offset_top = -167.32
offset_right = 775.0
offset_bottom = 208.68
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_0sg8s")
expand_mode = 1
stretch_mode = 4

[node name="BottomButtons" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.919
anchor_right = 0.5
anchor_bottom = 0.919
offset_left = -640.0
offset_top = -57.52
offset_right = 640.0
offset_bottom = 42.48
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 200

[node name="StartButton" type="Button" parent="BottomButtons"]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
theme_override_colors/font_hover_color = Color(0.972549, 0.972549, 0.972549, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0.666667, 1)
theme_override_colors/font_color = Color(0.239216, 0.239216, 0.239216, 1)
theme_override_fonts/font = ExtResource("4_utsmw")
theme_override_font_sizes/font_size = 25
theme_override_styles/hover = ExtResource("5_nhk61")
theme_override_styles/normal = ExtResource("6_cj54l")
text = "Start"

[node name="SettingsButton" type="Button" parent="BottomButtons"]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
theme_override_colors/font_hover_color = Color(0.972549, 0.972549, 0.972549, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0.666667, 1)
theme_override_colors/font_color = Color(0.239216, 0.239216, 0.239216, 1)
theme_override_fonts/font = ExtResource("4_utsmw")
theme_override_font_sizes/font_size = 25
theme_override_styles/hover = ExtResource("5_nhk61")
theme_override_styles/normal = ExtResource("6_cj54l")
text = "Settings"

[node name="QuitButton" type="Button" parent="BottomButtons"]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
theme_override_colors/font_hover_color = Color(0.972549, 0.972549, 0.972549, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0.666667, 1)
theme_override_colors/font_color = Color(0.239216, 0.239216, 0.239216, 1)
theme_override_fonts/font = ExtResource("4_utsmw")
theme_override_font_sizes/font_size = 25
theme_override_styles/hover = ExtResource("5_nhk61")
theme_override_styles/normal = ExtResource("6_cj54l")
text = "Quit
"

[node name="MainVbox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.587
anchor_right = 0.5
anchor_bottom = 0.587
offset_left = -808.0
offset_top = -255.96
offset_right = 808.0
offset_bottom = 249.04
grow_horizontal = 2
grow_vertical = 2

[node name="SettingsOverlay" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("9_8ivq5")

[node name="Main Menu Dimming2" type="ColorRect" parent="SettingsOverlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.501961)

[node name="PanelContainer" type="PanelContainer" parent="SettingsOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -318.5
offset_top = -217.5
offset_right = 318.5
offset_bottom = 217.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_dh2o8")

[node name="TextureRect" type="TextureRect" parent="SettingsOverlay/PanelContainer"]
self_modulate = Color(1, 1, 1, 0.227451)
layout_mode = 2
texture = ExtResource("2_mqvhc")
expand_mode = 1
stretch_mode = 1

[node name="MainVertical" type="VBoxContainer" parent="SettingsOverlay/PanelContainer"]
clip_contents = true
layout_mode = 2
theme_override_constants/separation = 20

[node name="LobbySettingsLabel" type="Label" parent="SettingsOverlay/PanelContainer/MainVertical"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.239216, 0.239216, 0.239216, 1)
theme_override_colors/font_outline_color = Color(0.85098, 0.85098, 0.85098, 1)
theme_override_constants/outline_size = 25
theme_override_fonts/font = ExtResource("10_eex3c")
theme_override_font_sizes/font_size = 60
text = "Game Settings!"

[node name="AvailableOptions" type="HBoxContainer" parent="SettingsOverlay/PanelContainer/MainVertical"]
layout_mode = 2
alignment = 1

[node name="Options" type="VBoxContainer" parent="SettingsOverlay/PanelContainer/MainVertical/AvailableOptions"]
layout_mode = 2

[node name="PlayerLimit" type="Label" parent="SettingsOverlay/PanelContainer/MainVertical/AvailableOptions/Options"]
layout_mode = 2
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("4_utsmw")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_0xjsq")
text = "Player Limit"

[node name="NumberCards" type="Label" parent="SettingsOverlay/PanelContainer/MainVertical/AvailableOptions/Options"]
layout_mode = 2
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("4_utsmw")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_0xjsq")
text = "Number of Cards"

[node name="RoundTimer" type="Label" parent="SettingsOverlay/PanelContainer/MainVertical/AvailableOptions/Options"]
layout_mode = 2
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("4_utsmw")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_0xjsq")
text = "Round Timer"

[node name="EndByPoints" type="Label" parent="SettingsOverlay/PanelContainer/MainVertical/AvailableOptions/Options"]
layout_mode = 2
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("4_utsmw")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_0xjsq")
text = "End by Points"

[node name="Rounds" type="Label" parent="SettingsOverlay/PanelContainer/MainVertical/AvailableOptions/Options"]
layout_mode = 2
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("4_utsmw")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_0xjsq")
text = "Rounds"

[node name="MaxPoints" type="Label" parent="SettingsOverlay/PanelContainer/MainVertical/AvailableOptions/Options"]
layout_mode = 2
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("4_utsmw")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_0xjsq")
text = "Maximum Points"

[node name="Choices" type="VBoxContainer" parent="SettingsOverlay/PanelContainer/MainVertical/AvailableOptions"]
layout_mode = 2

[node name="PlayerLimitDropdown" type="OptionButton" parent="SettingsOverlay/PanelContainer/MainVertical/AvailableOptions/Choices"]
layout_mode = 2
theme_override_colors/font_color = Color(0.239216, 0.239216, 0.239216, 1)
theme_override_fonts/font = ExtResource("4_utsmw")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_5wcuy")
selected = 8
item_count = 9
popup/item_0/text = "2"
popup/item_1/text = "3"
popup/item_1/id = 1
popup/item_2/text = "4"
popup/item_2/id = 2
popup/item_3/text = "5"
popup/item_3/id = 3
popup/item_4/text = "6"
popup/item_4/id = 4
popup/item_5/text = "7"
popup/item_5/id = 5
popup/item_6/text = "8"
popup/item_6/id = 6
popup/item_7/text = "9"
popup/item_7/id = 7
popup/item_8/text = "10"
popup/item_8/id = 8

[node name="CardNumberDropdown" type="OptionButton" parent="SettingsOverlay/PanelContainer/MainVertical/AvailableOptions/Choices"]
layout_mode = 2
theme_override_colors/font_color = Color(0.239216, 0.239216, 0.239216, 1)
theme_override_fonts/font = ExtResource("4_utsmw")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_5wcuy")
selected = 9
item_count = 10
popup/item_0/text = "1"
popup/item_1/text = "2"
popup/item_1/id = 1
popup/item_2/text = "3"
popup/item_2/id = 2
popup/item_3/text = "4"
popup/item_3/id = 3
popup/item_4/text = "5"
popup/item_4/id = 4
popup/item_5/text = "6"
popup/item_5/id = 5
popup/item_6/text = "7"
popup/item_6/id = 6
popup/item_7/text = "8"
popup/item_7/id = 7
popup/item_8/text = "9"
popup/item_8/id = 8
popup/item_9/text = "10"
popup/item_9/id = 9

[node name="RoundTimerDropdown" type="OptionButton" parent="SettingsOverlay/PanelContainer/MainVertical/AvailableOptions/Choices"]
layout_mode = 2
theme_override_colors/font_color = Color(0.239216, 0.239216, 0.239216, 1)
theme_override_fonts/font = ExtResource("4_utsmw")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_5wcuy")
selected = 1
item_count = 3
popup/item_0/text = "30"
popup/item_1/text = "45"
popup/item_1/id = 1
popup/item_2/text = "60"
popup/item_2/id = 2

[node name="EndPointsDropdown" type="OptionButton" parent="SettingsOverlay/PanelContainer/MainVertical/AvailableOptions/Choices"]
layout_mode = 2
theme_override_colors/font_color = Color(0.239216, 0.239216, 0.239216, 1)
theme_override_fonts/font = ExtResource("4_utsmw")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_5wcuy")
selected = 0
item_count = 2
popup/item_0/text = "No"
popup/item_1/text = "Yes"
popup/item_1/id = 1

[node name="RoundsDropdown" type="OptionButton" parent="SettingsOverlay/PanelContainer/MainVertical/AvailableOptions/Choices"]
layout_mode = 2
theme_override_colors/font_color = Color(0.239216, 0.239216, 0.239216, 1)
theme_override_fonts/font = ExtResource("4_utsmw")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_5wcuy")
selected = 0
item_count = 5
popup/item_0/text = "1"
popup/item_1/text = "2"
popup/item_1/id = 1
popup/item_2/text = "3"
popup/item_2/id = 2
popup/item_3/text = "4"
popup/item_3/id = 3
popup/item_4/text = "5"
popup/item_4/id = 4

[node name="MaxPointsDropdown" type="OptionButton" parent="SettingsOverlay/PanelContainer/MainVertical/AvailableOptions/Choices"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.239216, 0.239216, 0.239216, 1)
theme_override_fonts/font = ExtResource("4_utsmw")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_5wcuy")
selected = 0
item_count = 2
popup/item_0/text = "60"
popup/item_1/text = "80"
popup/item_1/id = 1

[node name="Close" type="Button" parent="SettingsOverlay"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.656
anchor_top = 0.322
anchor_right = 0.656
anchor_bottom = 0.322
offset_left = -19.52
offset_top = -24.76
offset_right = 19.48
offset_bottom = 24.24
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0.239216, 0.239216, 0.239216, 1)
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_wgurt")
text = "X"

[connection signal="pressed" from="BottomButtons/StartButton" to="." method="_on_start_button_pressed"]
